--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,15 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+         
+         
+         
+         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
 
 
 </project>
